--- a/inventory/src/main/res/layout/activity_create.xml
+++ b/inventory/src/main/res/layout/activity_create.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="silver.reminder.inventory.InventoryCreateActivity"
+    tools:context=".InventoryCreateActivity"
     android:orientation="vertical">
 
     <TextView
@@ -148,17 +148,17 @@
                 android:weightSum="1"
                 android:orientation="horizontal" >
 
-                <EditText
-                    android:layout_width="103dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/editText5" />
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="使用者"
                     android:id="@+id/textView15" />
+
+                <EditText
+                    android:layout_width="103dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/editText5" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -180,24 +180,24 @@
             android:layout_height="wrap_content"
             android:weightSum="1" >
 
-            <EditText
-                android:layout_width="79dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/editText7" />
-
-            <Spinner
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/spinner2"
-                android:entries="@array/unit"
-                android:focusable="false" />
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="數量"
                 android:id="@+id/textView17" />
+
+            <EditText
+                android:layout_width="54dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/editText7" />
+
+            <Spinner
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
+                android:id="@+id/spinner2"
+                android:entries="@array/unit"
+                android:focusable="false" />
 
             <TextView
                 android:layout_width="wrap_content"
