--- a/inventory/src/main/res/layout/activity_home.xml
+++ b/inventory/src/main/res/layout/activity_home.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="silver.reminder.inventory.InventoryHomeActivity"
+    tools:context=".InventoryHomeActivity"
     android:orientation="vertical"
     android:weightSum="1">
 
