--- a/inventory/src/main/res/layout/activity_list.xml
+++ b/inventory/src/main/res/layout/activity_list.xml
@@ -7,8 +7,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="silver.reminder.inventory.InventoryListActivity"
-    android:orientation="vertical">
+    tools:context=".InventoryListActivity"
+    android:orientation="vertical"
+    android:gravity="center">
 
     <TextView
         android:layout_width="match_parent"
