--- a/inventory/src/main/res/layout/activity_location.xml
+++ b/inventory/src/main/res/layout/activity_location.xml
@@ -4,10 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".InventoryLocationActivity"
+    tools:context=".InventoryLocation_Activity"
     android:orientation="vertical">
 
 
@@ -15,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="使用者"
+        android:text="地點"
         android:id="@+id/textView34"
         android:textAlignment="center" />
 
@@ -26,3 +25,6 @@
         android:numColumns="3" />
 
 </LinearLayout>
+
+    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
+    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
