--- a/care/src/main/res/layout/activity_care_setdd_editor.xml
+++ b/care/src/main/res/layout/activity_care_setdd_editor.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".care.SetddEditorActivity">
+    tools:context=".SetddEditorActivity">
 
     <TextView
         android:id="@+id/txvTitle"
